# hyperpack

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  commands.py  pyproject.toml
.github/workflows/: main_pipeline.yml
docs/: requirements.txt
docs/source/: benchmarks.rst  conf.py  description.rst  extra_methods.rst  figures.rst  hypersearch.rst  index.rst  installation.rst  localsearch.rst  logging.rst  problem_params.rst  reference.rst  simple_solve.rst  solution_structure.rst  strip_packing.rst  usage_index.rst
docs/source/_static/: example__container-id.html  example_graph.html
hyperpack/: __init__.py  abstract.py  constants.py  exceptions.py  heuristics.py  loggers.py  mixins.py  processes.py  structures.py  utils.py
hyperpack/benchmarks/: __init__.py
hyperpack/benchmarks/datasets/: __init__.py
hyperpack/benchmarks/datasets/hopper_and_turton_2000/: C1.py  C2.py  C3.py  C4.py  C5.py  C6.py  C7.py  __init__.py
tests/: conftest.py  test3D.py  test_0_plotly_kaleido.py  test_figure.py  test_operability.py  test_orient_items.py  test_potential_points_strategy.py  test_solution_logging.py  test_sort_items.py  utils.py
tests/points_tests/: test_point_A.py  test_point_A_.py  test_point_A__.py  test_point_B.py  test_point_B_.py  test_point_B__.py  test_point_C.py  test_point_D.py  test_point_E.py  test_point_F.py
tests/settings_tests/: test_validation_figure.py  test_validation_max_time_in_seconds.py  test_validation_rotation.py  test_validation_settings_format.py  test_validation_workers_num.py
tests/solving_tests/: test_HyperSearchProcess.py  test_hypersearch_mp.py  test_hypersearch_sp.py  test_local_search.py  test_multiprocessing.py  test_singlecore_hypersearch.py  test_solve.py
tests/strip_pack_tests/: test_strip_hypersearch_mp.py  test_strip_hypersearch_sp.py  test_strip_local_search.py  test_strip_pack_attrs.py  test_strip_solving.py
tests/structures_tests/: test_containers.py  test_dimensions.py  test_items.py
tests/tests_graphs/: generate_graphs.py
